--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -1,5 +1,25 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800");
+table {
+  border: 0;
+  border-spacing: 0 0.6em;
+}
+table th {
+  color: #fff;
+  background-color: #002855;
+  padding: 0.8em !important;
+}
+table td {
+  background-color: #f2f2f2;
+  border-bottom: 0;
+  border-left: 1px solid #F0F0F0;
+  border-right: 0;
+  border-top: 1px solid #F0F0F0;
+  line-height: 14px;
+  padding: 10px;
+  vertical-align: middle;
+}
+
 .visually-hide {
   position: absolute !important;
   display: inline-block;
@@ -598,7 +618,7 @@ body.post-type-archive-centros_salud #list-centros_salud ul li .info .title {
   justify-content: center;
 }
 .people-list-wrapper li {
-  margin: 1em 1em 3em;
+  margin: 2em 1em 3em;
   text-align: center;
   width: 300px;
 }
@@ -616,10 +636,51 @@ body.post-type-archive-centros_salud #list-centros_salud ul li .info .title {
   margin: 0 auto;
   height: 100%;
   width: 150px;
+  object-fit: cover;
 }
 .people-list-wrapper li .title {
   font-weight: bold;
   font-size: 1.1em;
+}
+
+.people-list-wrapper.avatar-as-circle .image {
+  border-radius: 300px;
+}
+
+.people-list-wrapper.avatar-as-square li {
+  margin: 2em 0em;
+  width: 270px;
+}
+.people-list-wrapper.avatar-as-square li a {
+  display: inline-block;
+  position: relative;
+}
+.people-list-wrapper.avatar-as-square li a:hover img {
+  opacity: 0.6;
+}
+.people-list-wrapper.avatar-as-square .image {
+  width: 200px;
+  height: 200px;
+  padding: 0;
+  margin: 0;
+  border-radius: 0px;
+}
+.people-list-wrapper.avatar-as-square .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.people-list-wrapper.avatar-as-square .title {
+  display: block;
+  text-align: center;
+  max-width: 200px;
+  font-weight: normal;
+  font-size: 1.1em;
+  line-height: 1.5em;
+}
+
+.people-list-wrapper.avatar-as-square.rounded-corners .image {
+  border-radius: 20px;
 }
 
 .nnice-cta {
@@ -1105,6 +1166,9 @@ body.page-municipio .services-list li img {
   object-position: top;
   border: 1px solid silver;
 }
+body.page-municipio table {
+  min-width: 80%;
+}
 
 #map_puntos_huertas .leaflet-popup-content {
   min-width: 380px;
@@ -1133,6 +1197,29 @@ body.page-municipio .services-list li img {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+}
+
+.servicios-cards-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.servicio-card {
+  width: 25%;
+  min-width: 270px;
+  margin: 0.6em;
+}
+.servicio-card .name {
+  font-size: 1.1em !important;
+  background-color: #002855;
+  color: white;
+  padding: 0.4em 0.6em !important;
+  margin: 0 !important;
+  text-align: center !important;
+}
+.servicio-card .details {
+  background-color: #f2f2f2;
+  padding: 1em;
 }
 
 .effect-enlarge-shadow:hover {
