--- a/themes/mrg/css/sass/_mrg-fixes.scss
+++ b/themes/mrg/css/sass/_mrg-fixes.scss
@@ -438,6 +438,182 @@ form.form-subscribe {
 
 }
 
+form.form-subscribe-cleaner {
+	border: 2px solid $orange;
+	padding: 1em;
+	border-radius: 1em;
+	margin: 2em auto;
+	max-width: 700px;
+   display: block;
+	
+	@media screen and (max-width: $mobile-width) {
+		margin-top: 1em;
+	}
+
+	legend {
+		color: inherit;
+		font-weight: 900;
+		font-family: $main-font;
+		text-transform: uppercase;
+		font-size: 11px;
+		letter-spacing: 2px;
+	}
+	
+	label, 
+	.fake-label {
+		color: inherit;
+		margin-bottom: 0;
+		font-weight: bold;
+		font-family: $main-font;
+		text-transform: uppercase;
+		font-size: 11px;
+		letter-spacing: 2px;
+	}
+	
+	.inline {
+		display: flex;
+		padding-right: 3em;
+		font-size: 0.9em;
+		width: 100%;
+	}	
+	
+	.inline label,
+	.inline .fake-label {
+		display: inline-block;
+		width: 200px;
+		margin-right: 1em;
+	}
+	
+	input, button {
+		border: 1px solid #939297;
+		color: #666666;
+		padding: 0.6em 1em;
+		font-size: 1.0em;
+		margin: 0;
+		font-family: $main-font;
+		width: 200px;
+		border-radius: 5px;
+		box-sizing: border-box;
+	}
+	
+	input[type="radio"] {
+		width: auto;
+	}
+	input[type="radio"] + label {
+		width: auto;
+		margin-right: 1em;
+		margin: 0 1em;
+	}
+
+	[type="submit"] {
+		border: 1px solid #fff;
+		background-color: $orange;
+		color: #fff;	
+		width: auto;
+		padding: 1em 1.7em !important;
+		text-transform: uppercase;
+		
+		&:hover {
+			color: #000;
+			background: #ffffff !important;
+		}
+	}
+
+	input[type="checkbox"] {
+		width: auto;
+		margin-right: .4em;
+		vertical-align: text-top;
+	}	
+	
+	.row {
+		display: flex;
+		width: 100%;
+		flex-wrap: wrap;
+		align-items: center;
+		margin: 0.5em 0;
+	}
+	
+	.row.inline {
+		.inline {
+			width: 47%;
+			padding-right: 1em !important;
+			
+			input {
+				width: 100%;
+			}
+		}
+	}
+	
+	.row.center {
+		text-align: center;
+		margin: 0 auto;
+		
+		p {
+			width: 100%;
+		}
+	}
+	
+	.small-text {
+		font-size: .8em;
+		margin: 1em 0;
+		font-style: italic;
+	}
+
+	.row.small-input input {
+		width: 200px !important;
+	}
+
+	div.wpcf7-response-output {
+		 margin-top: 1em !important;
+	}
+
+	span.wpcf7-not-valid-tip {
+		color: #000;
+	}
+	span.wpcf7-list-item {
+		margin-left: 0;
+		display: block;
+	}
+	div.wpcf7-mail-sent-ok {
+		border: 0;
+	}
+	
+	.wpcf7-form-control-wrap {
+		width: 100%;
+	}
+
+	div.wpcf7 input[type="file"] {
+		border: 0;
+	}
+
+}
+
+body.page-medioambiente #wpcf7-f3292-p508-o1, body.page-medioambiente #wpcf7-f3176-o1 {
+	width:400px;
+
+	p, .wpcf7-number {
+		width:100%;
+	}
+}
+
+//Note: only for pre-gutenberg
+@media screen and (min-width: 800px) {
+	body.page-medioambiente #ecomaraton.module_add_shortcode .row .text {
+		width: 50%;
+		display: inline-block;
+	}
+
+	body.page-medioambiente #ecomaraton.module_add_shortcode .row .content {
+		width: 40%;
+		display: inline-block;
+		vertical-align: top;
+		margin-left: 2em;
+
+	}
+}
+
+
+
 .icon::before {
 	content: "";
 	display: inline-block;
