--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -46,6 +46,10 @@ h4 {
   font-size: smaller;
 }
 
+.centered {
+  margin: 0 auto;
+}
+
 .rounded-corners {
   border-radius: 10px;
   overflow: hidden;
@@ -80,6 +84,13 @@ dl.dt-black dt {
   -webkit-column-count: 2;
   -moz-column-count: 2;
 }
+@media screen and (max-width: 600px) {
+  .into-columns.has-2-columns {
+    column-count: 1;
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+  }
+}
 
 .chameleon-text {
   color: inherit;
@@ -91,16 +102,59 @@ dl.dt-black dt {
   vertical-align: top;
 }
 
-.alignwide {
-  margin-left: -80px;
-  margin-right: -80px;
+dl.inline-wrapped dt,
+dl.inline-wrapped dd {
+  display: inline-block;
+}
+
+dl.inline-wrapped dt:after {
+  content: ": ";
+}
+
+dl.inline-wrapped dt {
+  font-weight: bold;
+  margin-right: 0.2em;
+}
+
+.arrow::before {
+  display: inline-block;
+  content: "";
+  width: 1px;
+  height: 1px;
+  margin-left: 0.4em;
+  vertical-align: middle;
+  border-bottom: 4px solid transparent;
+  border-right: 4px solid transparent;
+}
+
+.arrow.arrow-down::before {
+  border-top: 4px solid #000;
+  border-left: 4px solid transparent;
+  margin-top: 0.2em;
+  margin-left: 0.2em;
+}
+
+.arrow.arrow-left::before {
+  border-top: 4px solid transparent;
+  border-left: 4px solid #000;
+}
+
+.accordion-box .accordion-title {
+  cursor: pointer;
+}
+
+@media screen and (min-width: 600px) {
+  .alignwide {
+    margin-left: -80px;
+    margin-right: -80px;
+  }
 }
 
 .alignfull {
   margin-left: calc( -100vw / 2 + 100% / 2 );
   margin-right: calc( -100vw / 2 + 100% / 2 );
   max-width: 100vw;
-  width: 99.7vw;
+  width: auto;
 }
 
 .alignfull img {
@@ -158,6 +212,10 @@ dl.dt-black dt {
   top: 80px;
 }
 
+#wrapper {
+  float: none;
+}
+
 #page_content_wrapper .search_form_wrapper {
   float: none;
   width: auto;
@@ -212,47 +270,6 @@ dl.dt-black dt {
 
 .wrapper_max_width {
   max-width: 1080px;
-  margin: 0 auto;
-}
-
-dl.inline-wrapped dt,
-dl.inline-wrapped dd {
-  display: inline-block;
-}
-
-dl.inline-wrapped dt:after {
-  content: ": ";
-}
-
-dl.inline-wrapped dt {
-  font-weight: bold;
-  margin-right: 0.2em;
-}
-
-.arrow::before {
-  display: inline-block;
-  content: "";
-  width: 1px;
-  height: 1px;
-  margin-left: 0.4em;
-  vertical-align: middle;
-  border-bottom: 4px solid transparent;
-  border-right: 4px solid transparent;
-}
-
-.arrow.arrow-down::before {
-  border-top: 4px solid #000;
-  border-left: 4px solid transparent;
-  margin-top: 0.2em;
-  margin-left: 0.2em;
-}
-
-.arrow.arrow-left::before {
-  border-top: 4px solid transparent;
-  border-left: 4px solid #000;
-}
-
-.centered {
   margin: 0 auto;
 }
 
@@ -527,6 +544,7 @@ form.form-subscribe-cleaner {
 @media screen and (max-width: 500px) {
   form.form-subscribe-cleaner {
     margin-top: 1em;
+    max-width: none;
   }
 }
 form.form-subscribe-cleaner legend {
@@ -647,10 +665,28 @@ form.form-subscribe-cleaner div.wpcf7 input[type=file] {
 body.page-medioambiente #wpcf7-f3292-p508-o1, body.page-medioambiente #wpcf7-f3176-o1 {
   width: 400px;
 }
+@media screen and (max-width: 600px) {
+  body.page-medioambiente #wpcf7-f3292-p508-o1, body.page-medioambiente #wpcf7-f3176-o1 {
+    width: 92%;
+  }
+}
 body.page-medioambiente #wpcf7-f3292-p508-o1 p, body.page-medioambiente #wpcf7-f3292-p508-o1 .wpcf7-number, body.page-medioambiente #wpcf7-f3176-o1 p, body.page-medioambiente #wpcf7-f3176-o1 .wpcf7-number {
   width: 100%;
 }
 
+@media screen and (min-width: 800px) {
+  body.page-medioambiente #ecomaraton.module_add_shortcode .row .text {
+    width: 50%;
+    display: inline-block;
+  }
+
+  body.page-medioambiente #ecomaraton.module_add_shortcode .row .content {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 2em;
+  }
+}
 .icon::before {
   content: "";
   display: inline-block;
@@ -709,7 +745,7 @@ body.page-medioambiente #wpcf7-f3292-p508-o1 p, body.page-medioambiente #wpcf7-f
   font-size: 0.9em;
 }
 .ppb_module_centros-salud .centro-salud .info p {
-  padding: 0;
+  padding: 0 !important;
   display: block;
   margin: 0.2em 0;
 }
@@ -720,6 +756,9 @@ body.page-medioambiente #wpcf7-f3292-p508-o1 p, body.page-medioambiente #wpcf7-f
 }
 .ppb_module_centros-salud .centro-salud .info .more-info {
   margin-top: 1em;
+}
+.ppb_module_centros-salud .centro-salud .info .icon::before {
+  margin-right: 0.6em;
 }
 
 body.single-centros_salud #page_caption {
@@ -1062,6 +1101,15 @@ body.post-type-archive-centros_salud #list-centros_salud ul li .info .title {
   }
 }
 
+@media screen and (max-width: 600px) {
+  .page-espacio-tecnologico .form-edlt-info-wrapper {
+    background: none;
+  }
+  .page-espacio-tecnologico .form-edlt-info-wrapper #mauticform_edltinformacioncursos {
+    max-width: none;
+  }
+}
+
 .agenda-congreso-educacion-wrapper .day {
   font-size: 1.7em;
 }
@@ -1141,6 +1189,12 @@ body.post-type-archive-centros_salud #list-centros_salud ul li .info .title {
   max-width: 300px;
   margin: 0.8em;
   position: relative;
+}
+@media screen and (max-width: 600px) {
+  .videos-thumbnails-list .item {
+    width: 48%;
+    margin: 0.2em;
+  }
 }
 .videos-thumbnails-list .item:hover {
   opacity: 0.7;
@@ -1608,13 +1662,22 @@ body.page-municipio table {
   transform: rotate(-20deg);
 }
 
+.background-grey {
+  background-color: #e2e2e2;
+}
+
+.background-orange {
+  background-color: #ff6a00;
+  color: #fff;
+}
+
 .page-template {
   font-size: 18px;
   font-family: "Muli", Arial, sans-serif;
 }
 .page-template .has-medium-font-size {
-  font-size: 1.5em;
-  line-height: 1.3em;
+  font-size: 1.5em !important;
+  line-height: 1.3em !important;
 }
 .page-template h3 {
   margin-top: 2em;
@@ -1625,7 +1688,7 @@ body.page-municipio table {
   font-size: 3em;
   font-weight: 900;
 }
-.page-template p {
+.page-template p, .page-template dl {
   padding: 0.5em;
 }
 
@@ -1638,8 +1701,47 @@ body.page-municipio table {
     text-align: left;
   }
 }
+.mrg-alert-notice {
+  padding: 2em 1em !important;
+  background-color: #135cad;
+  text-align: center;
+  color: #fff;
+  margin-left: calc( -100vw / 2 + 100% / 2 );
+  margin-right: calc( -100vw / 2 + 100% / 2 );
+}
+.mrg-alert-notice.icon-bell::before {
+  content: "";
+  display: inline-block;
+  background: url(../images/bell.svg) no-repeat;
+  width: 25px;
+  height: 25px;
+  margin-right: 0.6em;
+  vertical-align: middle;
+}
+
+.mrg-toc {
+  list-style-type: none;
+  padding-top: 15px;
+  border-top: 2px solid rgba(143, 143, 143, 0.5);
+  max-width: 1080px;
+}
+.mrg-toc li {
+  display: inline-block;
+  margin-right: 1em;
+  color: #ff6a00;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 20px;
+}
+
 #page_content_wrapper .inner .sidebar_content .wp-block-gallery {
   margin: 2em;
+}
+@media screen and (max-width: 600px) {
+  #page_content_wrapper .inner .sidebar_content .wp-block-gallery {
+    margin: 0;
+  }
 }
 #page_content_wrapper .inner .sidebar_content .wp-block-gallery.is-cropped img {
   height: inherit !important;
@@ -1725,22 +1827,6 @@ body.page-municipio table {
   padding: 0.4em 0;
 }
 
-.mrg-toc {
-  list-style-type: none;
-  padding-top: 15px;
-  border-top: 2px solid rgba(143, 143, 143, 0.5);
-  max-width: 1080px;
-}
-.mrg-toc li {
-  display: inline-block;
-  margin-right: 1em;
-  color: #ff6a00;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 14px;
-  line-height: 20px;
-}
-
 .cta .btn, .cta .wp-block-button__link, .mrg-cta .btn, .mrg-cta .wp-block-button__link {
   display: inline-block;
   margin-top: 2%;
@@ -1773,8 +1859,8 @@ body.page-municipio table {
   padding-left: 0;
 }
 .mrg-cta .has-medium-font-size {
-  font-size: 1.7em;
-  padding-left: 0;
+  font-size: 1.7em !important;
+  padding-left: 0 !important;
 }
 @media screen and (max-width: 700px) {
   .mrg-cta {
@@ -1826,6 +1912,7 @@ body.page-municipio table {
 @media screen and (max-width: 700px) {
   .mrg-cta.cta-image .wp-block-media-text__media {
     height: 260px;
+    width: 100%;
   }
   .mrg-cta.cta-image .wp-block-media-text__media img {
     vertical-align: top;
@@ -1838,15 +1925,6 @@ body.page-municipio table {
 .cta .donuth {
   width: 80%;
   height: 200px;
-}
-
-.background-grey {
-  background-color: #e2e2e2;
-}
-
-.background-orange {
-  background-color: #ff6a00;
-  color: #fff;
 }
 
 .cta-graph-img .wp-block-column.image {
@@ -1890,7 +1968,7 @@ body.page-municipio table {
 
 @media screen and (max-width: 700px) {
   .cta.cta-image.is-stacked-on-mobile p, .cta.cta-image.is-stacked-on-mobile .wp-block-button {
-    padding-left: 3em;
+    padding-left: 0em;
   }
 }
 
@@ -1946,13 +2024,19 @@ body.page-municipio table {
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
+.mrg-section-boxes .mrg-block-column-spaces-vertical dl {
+  padding: 0;
+}
 .mrg-section-boxes .mrg-block-column-spaces-vertical .title {
   font-weight: bold;
   padding: 0 !important;
   font-size: 1.2em;
 }
 .mrg-section-boxes .mrg-block-column-spaces-vertical .text {
-  padding: 1em 1em 0em 1.6em;
+  padding: 1em 1em 1em 1.6em;
+}
+.mrg-section-boxes .mrg-block-column-spaces-vertical .image img {
+  width: 100%;
 }
 .mrg-section-boxes .mrg-block-column-spaces-vertical.with-heading {
   margin: 0.5em;
@@ -1995,6 +2079,7 @@ body.page-municipio table {
 .mrg-section-grey-boxes-links .box .title {
   margin-bottom: 0 !important;
   margin-top: 0.4em !important;
+  padding: 0;
 }
 .mrg-section-grey-boxes-links .wp-block-column:not(:first-child) {
   margin-left: 0px;
@@ -2017,6 +2102,42 @@ body.page-municipio table {
 }
 .mrg-section-grey-boxes-links.section-featured .box .title {
   font-size: 1.2em;
+}
+
+body.home #gestion-municipal.mrg-section-grey-boxes-links {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1080px;
+}
+body.home #gestion-municipal.mrg-section-grey-boxes-links .wp-block-column {
+  max-width: 270px;
+  margin: 0;
+}
+@media screen and (max-width: 600px) {
+  body.home #gestion-municipal.mrg-section-grey-boxes-links .wp-block-column {
+    width: 33.3%;
+    flex-basis: auto;
+  }
+}
+body.home #gestion-municipal.mrg-section-grey-boxes-links .box {
+  margin: 0.5em;
+  hyphens: auto;
+}
+@media screen and (max-width: 600px) {
+  body.home #gestion-municipal.mrg-section-grey-boxes-links .box {
+    margin: 0.2em;
+  }
+}
+@media screen and (max-width: 600px) and (max-width: 600px) {
+  body.home #gestion-municipal.mrg-section-grey-boxes-links .box .image {
+    width: 80px;
+  }
+}
+@media screen and (max-width: 600px) {
+  body.home #gestion-municipal.mrg-section-grey-boxes-links .box .title {
+    letter-spacing: 0.02em;
+    font-size: 0.9em !important;
+  }
 }
 
 .mrg-section-blue-alt-boxes-links.section-no-spaces .box {
@@ -2073,27 +2194,74 @@ body.page-municipio table {
   margin-left: calc( -100vw / 2 + 100% / 2 );
   margin-right: calc( -100vw / 2 + 100% / 2 );
   max-width: 100vw;
-  width: 99.7vw;
 }
 
-.mrg-alert-notice {
-  padding: 2em 1em !important;
-  background-color: #135cad;
-  text-align: center;
-  color: #fff;
-  margin-left: calc( -100vw / 2 + 100% / 2 );
-  margin-right: calc( -100vw / 2 + 100% / 2 );
-  max-width: 100vw;
-  width: 99.7vw;
+@media screen and (max-width: 600px) {
+  body.home .wp-block-columns.has-5-columns.mrg-section-grey-boxes-links.section-featured .wp-block-column {
+    width: 49.5%;
+    display: inline-flex;
+    margin-bottom: 0.3em;
+  }
+  body.home .wp-block-columns.has-5-columns.mrg-section-grey-boxes-links.section-featured .wp-block-column:last-child {
+    width: 100%;
+  }
+  body.home .wp-block-columns.has-5-columns.mrg-section-grey-boxes-links.section-featured .wp-block-column .btn {
+    width: 100%;
+  }
+  body.home .wp-block-columns.has-5-columns.mrg-section-grey-boxes-links.section-featured .wp-block-column .btn .box {
+    height: 140px;
+  }
+  body.home .wp-block-columns.has-5-columns.mrg-section-grey-boxes-links.section-featured .wp-block-column .btn .image {
+    width: 90px;
+  }
+  body.home .wp-block-columns.has-4-columns.mrg-section-blue-alt-boxes-links .wp-block-column {
+    width: 49.5%;
+    display: inline-flex;
+    margin-bottom: 0.4em;
+  }
+  body.home .wp-block-columns.has-4-columns.mrg-section-blue-alt-boxes-links .wp-block-column .btn {
+    width: 100;
+  }
+  body.home .wp-block-columns.has-4-columns.mrg-section-blue-alt-boxes-links .wp-block-column .box {
+    padding: 2em 1em;
+    text-align: center;
+  }
+  body.home .wp-block-columns.has-4-columns.mrg-section-blue-alt-boxes-links .wp-block-column .box .image {
+    width: 60px;
+    margin: 0 auto;
+  }
+  body.home .wp-block-columns.has-4-columns.mrg-section-blue-alt-boxes-links .wp-block-column .box p {
+    padding: 0;
+  }
+  body.home .wp-block-columns.has-4-columns.mrg-section-blue-alt-boxes-links .wp-block-column .box .title {
+    text-align: center;
+  }
 }
-.mrg-alert-notice.icon-bell::before {
-  content: "";
-  display: inline-block;
-  background: url(../images/bell.svg) no-repeat;
-  width: 25px;
-  height: 25px;
-  margin-right: 0.6em;
-  vertical-align: middle;
+
+@media screen and (max-width: 600px) {
+  .mini-article .image {
+    height: 200px;
+  }
+  .mini-article .title {
+    font-weight: 600;
+    font-size: 1em !important;
+    line-height: 1.2em !important;
+  }
+  .mini-article .category {
+    font-size: 0.7em !important;
+    letter-spacing: 0.07em;
+  }
+}
+
+.ppb_module_centros-salud ul {
+  margin: 0 !important;
+}
+
+@media screen and (max-width: 600px) {
+  body.page-transporte .mrg-section-boxes .mrg-block-column-spaces-vertical {
+    width: 100%;
+    flex: auto !important;
+  }
 }
 
 @media print {
