--- a/themes/mrg/css/sass/_mrg-fixes.scss
+++ b/themes/mrg/css/sass/_mrg-fixes.scss
@@ -35,6 +35,10 @@
 	top: 80px;
 }
 
+#wrapper {
+	float:none;
+}
+
 #page_content_wrapper .search_form_wrapper {
 	float: none;
 	width: auto;
@@ -99,54 +103,10 @@ body.home .ppb_wrapper .ppb_gestion_municipal {
 	margin: 0 auto;
 }
 
-dl.inline-wrapped dt
-, dl.inline-wrapped dd {
-	display: inline-block;
-}
-dl.inline-wrapped dt:after{
-	content: ": ";
-}
-dl.inline-wrapped dt{
-	font-weight: bold;
-	margin-right: 0.2em;
-}
-
-.arrow::before{
-	display: inline-block;
-	content: "";
-	width: 1px;
-	height: 1px;
-	margin-left: 0.4em;
-	vertical-align: middle;
-	border-bottom: 4px solid transparent;
-	border-right: 4px solid transparent;
-}
-.arrow.arrow-down::before{
-	border-top: 4px solid #000;
-	border-left: 4px solid transparent;
-	margin-top: 0.2em;
-	margin-left: 0.2em;
-	
-}
-.arrow.arrow-left::before{
-	border-top: 4px solid transparent;
-	border-left: 4px solid #000;
-}
-
-.centered {margin: 0 auto;} 
-
 body.page-ciudad #page_content_wrapper .inner .sidebar_content img {
 	max-width: none !important;
 }
 body.page-ciudad #page_content_wrapper .row { margin-bottom: 6em; clear:both} 
-
-body.page-ciudad .remove-margin-page { 
-	margin-left: -4em; margin-right: -4em;  
-	
-	img { 
-		width: 100vw; 
-	} 
-} 
 
 body.page-ciudad .row-full-border { 
 	border-top: 1px solid $deep-blue; 
@@ -444,10 +404,11 @@ form.form-subscribe-cleaner {
 	border-radius: 1em;
 	margin: 2em auto;
 	max-width: 700px;
-   display: block;
-	
+	display: block;
+		
 	@media screen and (max-width: $mobile-width) {
 		margin-top: 1em;
+		max-width: none;
 	}
 
 	legend {
@@ -591,6 +552,10 @@ form.form-subscribe-cleaner {
 body.page-medioambiente #wpcf7-f3292-p508-o1, body.page-medioambiente #wpcf7-f3176-o1 {
 	width:400px;
 
+	@media screen and (max-width: 600px) {
+		width:92%;
+	}
+
 	p, .wpcf7-number {
 		width:100%;
 	}
@@ -611,8 +576,6 @@ body.page-medioambiente #wpcf7-f3292-p508-o1, body.page-medioambiente #wpcf7-f31
 
 	}
 }
-
-
 
 .icon::before {
 	content: "";
@@ -671,7 +634,7 @@ body.page-medioambiente #wpcf7-f3292-p508-o1, body.page-medioambiente #wpcf7-f31
 			font-size: 0.9em;
 			
 			p {
-				padding: 0;
+				padding: 0 !important;
 				display: block;
 				margin: 0.2em 0;
 			}
@@ -684,6 +647,10 @@ body.page-medioambiente #wpcf7-f3292-p508-o1, body.page-medioambiente #wpcf7-f31
 			
 			.more-info {
 				margin-top: 1em;
+			}
+
+			.icon::before {
+				margin-right: 0.6em;
 			}
 			
 		}
@@ -827,6 +794,11 @@ body.post-type-archive-centros_salud {
 		flex-wrap: wrap;
 		justify-content: center;
 	}
+
+	.wp-block-gallery .blocks-gallery-item figure {
+		flex-direction: column;
+		align-self: center;
+	}
 	
 	li {
 		margin: 2em 1em 3em;
@@ -855,7 +827,16 @@ body.post-type-archive-centros_salud {
 		.title {
 			font-weight: bold;
 			font-size: 1.1em;
+			color: $deep-blue;
+			
 		}
+		
+	}
+	.wp-block-gallery .blocks-gallery-item figure .title {
+		background: transparent;
+			position: relative;
+			padding-top: 0;
+			line-height: 1.3em;
 	}
 
 }
@@ -889,8 +870,8 @@ body.post-type-archive-centros_salud {
 		border-radius: 0px;
 
 		img {
-			width: 100%;
-			height: 100%;
+			width: 100% !important;
+			height: 100% !important;
 			object-fit: cover;
 		}
 	}
@@ -903,6 +884,14 @@ body.post-type-archive-centros_salud {
 		font-size: 1.1em;
 		line-height: 1.5em;
 	}
+
+	.wp-block-gallery.columns-2 .blocks-gallery-item figure{
+		align-self: center;
+	}
+}
+
+#page_content_wrapper .inner .sidebar_content .people-list-wrapper.avatar-as-square .image img {
+	height: 100% !important;
 }
 
 .people-list-wrapper.avatar-as-square.rounded-corners {
@@ -1028,6 +1017,7 @@ body.post-type-archive-centros_salud {
 			border-radius: 0 1em 1em 0;
 			color: #fff;
 			max-width: 540px;
+			margin: 0;
 			
 			@media screen and (max-width: $mobile-width) {
 				max-width: 300px;
@@ -1075,25 +1065,26 @@ body.post-type-archive-centros_salud {
 	}
 }
 
-/*
-body.page-1er-congreso-internacional-educacion-e-inclusion-desde-el-sur {
-	#cronograma-congreso {
-		background: url(../images/encabezado-congreso.png) top center no-repeat;
-		padding-top: 210px;
-		background-size: 1100px;
-	}
-}
-*/
+.page-espacio-tecnologico .form-edlt-info-wrapper {
+	@media screen and (max-width: 600px) {
+		background: none;
 
-#conocé-la-agenda-del-congreso { //congreso educacion
+		#mauticform_edltinformacioncursos {
+			max-width: none;
+		}
+	}	
+}
+
+.agenda-congreso-educacion-wrapper { //congreso educacion
 	.day {
-		font-size: 1.8em;
+		font-size: 1.7em;
 	}
 	.time {
 		margin: 1em 0;
-		font-size: 1.21em;
+		font-size: 1.1em;
 		color: #000;
 		font-weight: bold;
+		padding: 0 !important;
 	}
 
 	.congreso-educacion-accordion {
@@ -1179,6 +1170,11 @@ body.page-1er-congreso-internacional-educacion-e-inclusion-desde-el-sur {
 		max-width: 300px;
 		margin: 0.8em;
 		position: relative;
+
+		@media screen and (max-width: 600px) {
+			width: 48%;
+			margin: 0.2em;
+		}
 		
 		&:hover {
 			opacity: 0.7;
